# MIMUW_latte_compiler

./: .gitignore  Makefile  test_bad.sh  test_output.sh
lib/: runtime.bc  runtime.ll
my_examples/: myExample01.lat  myExample02.lat  myExample03.lat
src/: BlocksToSSA.hs  Compiler.hs  CompilerMain.hs  CopyConstantPropagation.hs  DominatorTree.hs  Gcse.hs  Latte.cabal  LatteStdLibFunctions.hs  QuadrupleCode.hs  QuadrupleCodeToBlocks.hs  QuadrupleGeneration.hs  QuadrupleToLLVM.hs  RemoveDeadQuadruples.hs  SimplifyExp.hs  SimplifyStmt.hs  TypeChecker.hs  TypeCheckerMain.hs
src/Grammar/: AbsLatte.hi  AbsLatte.hs  AbsLatte.hs.bak  DocLatte.txt  DocLatte.txt.bak  Latte.cf  LexLatte.hi  LexLatte.hs  LexLatte.x  LexLatte.x.bak  Makefile  ParLatte.hi  ParLatte.hs  ParLatte.info  ParLatte.y  ParLatte.y.bak  PrintLatte.hi  PrintLatte.hs  PrintLatte.hs.bak  SkelLatte.hi  SkelLatte.hs  SkelLatte.hs.bak  TestLatte  TestLatte.hi
