name:                Latte-language-compiler
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable LatteTypeChecker
  main-is:             TypeCheckerMain.hs
  other-modules:       TypeChecker
                     , AbsLatte
                     , LexLatte
                     , ParLatte
                     , SimplifyExp
  hs-source-dirs:      ., ./Grammar
  build-depends:       base >=4.7 && <5
                     , array ==0.5.4.0
                     , mtl ==2.3.1
                     , containers ==0.6.2.1
                     , process ==1.6.9.0
                     , filepath ==1.4.2.1
                     , dom-lt ==0.2.3
  default-language:    Haskell2010

executable LatteCompiler
  main-is:             CompilerMain.hs
  other-modules:       Compiler
                     , TypeChecker
                     , AbsLatte
                     , LexLatte
                     , ParLatte
                     , SimplifyExp
                     , QuadrupleCode
                     , QuadrupleGeneration
                     , QuadrupleCodeToBlocks
                     , BlocksToSSA
                     , CopyConstantPropagation
                     , QuadrupleToLLVM
                     , LatteStdLibFunctions
                     , SimplifyStmt
                     , RemoveDeadQuadruples
                     , DominatorTree
                     , Gcse
  hs-source-dirs:      ., ./Grammar
  build-depends:       base >=4.7 && <5
                     , array ==0.5.4.0
                     , mtl ==2.3.1
                     , containers ==0.6.2.1
                     , process ==1.6.9.0
                     , filepath ==1.4.2.1
                     , dom-lt ==0.2.3
  default-language:    Haskell2010